--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 	"type": "library",
 	"keywords": [ "auth", "authentication", "login", "security" ],
 	"homepage": "https://github.com/delight-im/PHP-Auth",
-	"license": "Apache-2.0",
+	"license": "MIT",
 	"autoload": {
 		"psr-4": {
 			"Delight\\Auth\\": "src/"
