--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	"require": {
 		"php": ">=5.6.0",
 		"ext-openssl": "*",
+		"delight-im/base64": "^1.0",
 		"delight-im/cookie": "^2.1",
 		"delight-im/db": "^1.2"
 	},
