--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,17 @@
 {
 	"name": "delight-im/auth",
 	"description": "Authentication for PHP. Simple, lightweight and secure.",
-	"require": {
+  	"repositories": [
+	{
+	  "type": "vcs",
+	  "url": "https://github.com/cewlbird/PHP-Cookie.git"
+	}
+  ],
+  "require": {
 		"php": ">=5.6.0",
 		"ext-openssl": "*",
 		"delight-im/base64": "^1.0",
-		"delight-im/cookie": "^3.1",
+		"delight-im/cookie": "dev-custom",
 		"delight-im/db": "^1.3"
 	},
 	"type": "library",
