--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 		"ext-openssl": "*",
 		"delight-im/base64": "^1.0",
 		"delight-im/cookie": "^3.1",
-		"delight-im/db": "^1.3"
+		"delight-im/db": "^1.3",
+		"delight-im/otp": "^1.0"
 	},
 	"type": "library",
 	"keywords": [ "auth", "authentication", "login", "security" ],
